# aispikes

./: .gitignore  README.md  pyproject.toml
spikes/do_anything/: README.md  main.py  pyproject.toml
spikes/podcastry/: main.py  pyproject.toml
spikes/podcastry/config/: podcast_downloader_config.json
spikes/podcastry/src/: annotate.py  download.py  rag.py  transcribe.py  utils.py
spikes/storyteller/: cli.py  pyproject.toml
spikes/storyteller/config/: feature_flags.json
spikes/storyteller/data/3ae4e510-9a0d-4b44-b771-6a20d3bb433d/: story_condition.json
spikes/storyteller/src/: story.py
spikes/thoughtful_ai_test/: main.py  pyproject.toml
spikes/thoughtful_ai_test/.gradio/flagged/: dataset1.csv
spikes/weekend_agent/: main.py  pyproject.toml  quickstart.py
spikes/weekend_agent/quickstart/: basic.py  tools.py
spikes/weekend_agent/weekend_agent/: date_extracter.py  events.py  scraper.py  tools.py
training/antropic_mcp/: chatbot.py  mcp_client.py  mcp_client_multiple_servers.py  pyproject.toml  remote_server.py  results.json  results.md  server.py
training/antropic_mcp/papers/advances_in_llm_training/: papers_info.json
training/antropic_mcp/papers/agentic/: papers_info.json
training/antropic_mcp/papers/attention/: papers_info.json
training/antropic_mcp/papers/dapo_policy_optimization_reasoning_llm/: papers_info.json
training/antropic_mcp/papers/grpo/: papers_info.json
training/antropic_mcp/papers/historical_battle_of_panipat_1761_ahmad_shah_durrani_versus_marathas/: papers_info.json
training/antropic_mcp/papers/llm_finetuning/: papers_info.json
training/antropic_mcp/papers/model_quantization_large_language_models/: papers_info.json
training/antropic_mcp/papers/third_battle_of_panipat/: papers_info.json
training/antropic_mcp/papers/third_battle_of_panipat_1761_ahmad_shah_abdali_marathas/: papers_info.json
training/antropic_mcp/papers/transformers/: papers_info.json
training/colpali_rag/: colpali.ipynb  colpali.py  colpali_byaldi.ipynb  colpali_rag.ipynb  colpali_rag.py  lancedb_rag.py  pyproject.toml
training/colpali_rag/test.db/my_table.lance/_indices/fts/: .managed.json  meta.json
training/colpali_rag/test.db/my_table.lance/_transactions/: 0-8ebf6f55-68a3-4731-bbd3-c47b1e072cbc.txn  1-d119c49a-3f20-425a-a1a9-8f07329c7dbb.txn
training/colpali_rag/test.db/my_table.lance/data/: 95f1c205-f12a-42c4-a564-1b5bcbf441cb.lance
training/cua/: langgraph_cua.py  openai_cua.py  pyproject.toml  scrapybara_cua.py
training/grpo_finetuning/L3/: Lesson_3.ipynb
training/grpo_finetuning/L4/: Lesson_4.ipynb
training/grpo_finetuning/L5/: Lesson_5.ipynb
training/grpo_finetuning/L7/: Lesson_7.ipynb
training/openai_agents_api/: agents_deepdive.py  agents_quickstart.py  customer_service.py  pyproject.toml
training/pydantic_agent/: flight_booking.py  pyproject.toml  question_graph.py  question_graph_history.json  start.py
training/pydantic_agents/: pyproject.toml
training/quant_lora/: QuantizeFintune_Llama.ipynb
training/supervised_finetuning/: 2024_finetune_QLora.ipynb  basic_gpt.ipynb  micrograd.ipynb  pyproject.toml  supervised_finetuning.ipynb  trl_quickstart.py
training/unsloth/: Qwen3_GRPO.ipynb  unsloth.ipynb  unsloth_vision.ipynb
