[project]
name = "antropic-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.51.0",
    "arxiv>=2.2.0",
    "mcp[cli]>=1.3.0",
    "nest-asyncio>=1.6.0",
]

[dependency-groups]
dev = [
    "pip>=25.1.1",
]
