[project]
name = "cua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "langchain>=0.3.25",
    "langgraph>=0.4.3",
    "nest-asyncio>=1.6.0",
    "openai>=1.78.1",
    "playwright>=1.52.0",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.1.0",
    "scrapybara>=2.5.1",
]

[dependency-groups]
dev = [
    "pip>=25.1.1",
]
